--- a/src/style.css
+++ b/src/style.css
@@ -90,3 +90,24 @@
     top: 0;
   }
   
+  @media (max-width: 600px) {
+    nav {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    nav button {
+      width: 100%;
+      max-width: 300px;
+    }
+  
+    h1 {
+      font-size: 1.8em;
+      text-align: center;
+    }
+  
+    p {
+      font-size: 1em;
+      text-align: center;
+    }
+  }
